# liquid-fixpoint

./: .gitignore  .hlint.yaml  .stan.toml  .travis.yml  CHANGES.md  Language-Fixpoint-Misc.html  Language-Fixpoint-Parse.html  Language-Fixpoint-Partition.html  Language-Fixpoint-Smt-Bitvector.html  Language-Fixpoint-Smt-Interface.html  Language-Fixpoint-Smt-Serialize.html  Language-Fixpoint-Smt-Theories.html  Language-Fixpoint-Smt-Types.html  Language-Fixpoint-Solver-Deps.html  Language-Fixpoint-Solver-Eliminate.html  Language-Fixpoint-Solver-Graph.html  Language-Fixpoint-Solver-Monad.html  Language-Fixpoint-Solver-Solution.html  Language-Fixpoint-Solver-Solve.html  Language-Fixpoint-Solver-TrivialSort.html  Language-Fixpoint-Solver-Types.html  Language-Fixpoint-Solver-UniqifyBinds.html  Language-Fixpoint-Solver-UniqifyKVars.html  Language-Fixpoint-Solver-Validate.html  Language-Fixpoint-Solver-Worklist.html  Language-Fixpoint-Solver.html  Language-Fixpoint-SortCheck.html  Language-Fixpoint-Types-Config.html  Language-Fixpoint-Types-Constraints.html  Language-Fixpoint-Types-Environments.html  Language-Fixpoint-Types-Errors.html  Language-Fixpoint-Types-Names.html  Language-Fixpoint-Types-PrettyPrint.html  Language-Fixpoint-Types-Refinements.html  Language-Fixpoint-Types-Sorts.html  Language-Fixpoint-Types-Spans.html  Language-Fixpoint-Types-Substitutions.html  Language-Fixpoint-Types-Visitor.html  Language-Fixpoint-Types.html  Language-Fixpoint-Utils-Files.html  (+82 more)
.circleci/: config.yml
.github/workflows/: cabal.yml  hlint-ci.yml  hlint.yml  stack.yml  stan.yml
alecs/: DataCon.fq  DataConId.fq  JustId.fq
scripts/: travis
src/: Language-Fixpoint-Misc.html  Language-Fixpoint-Parse.html  Language-Fixpoint-Partition.html  Language-Fixpoint-Smt-Bitvector.html  Language-Fixpoint-Smt-Interface.html  Language-Fixpoint-Smt-Serialize.html  Language-Fixpoint-Smt-Theories.html  Language-Fixpoint-Smt-Types.html  Language-Fixpoint-Solver-Deps.html  Language-Fixpoint-Solver-Eliminate.html  Language-Fixpoint-Solver-Graph.html  Language-Fixpoint-Solver-Monad.html  Language-Fixpoint-Solver-Solution.html  Language-Fixpoint-Solver-Solve.html  Language-Fixpoint-Solver-TrivialSort.html  Language-Fixpoint-Solver-Types.html  Language-Fixpoint-Solver-UniqifyBinds.html  Language-Fixpoint-Solver-UniqifyKVars.html  Language-Fixpoint-Solver-Validate.html  Language-Fixpoint-Solver-Worklist.html  Language-Fixpoint-Solver.html  Language-Fixpoint-SortCheck.html  Language-Fixpoint-Types-Config.html  Language-Fixpoint-Types-Constraints.html  Language-Fixpoint-Types-Environments.html  Language-Fixpoint-Types-Errors.html  Language-Fixpoint-Types-Names.html  Language-Fixpoint-Types-PrettyPrint.html  Language-Fixpoint-Types-Refinements.html  Language-Fixpoint-Types-Sorts.html  Language-Fixpoint-Types-Spans.html  Language-Fixpoint-Types-Substitutions.html  Language-Fixpoint-Types-Visitor.html  Language-Fixpoint-Types.html  Language-Fixpoint-Utils-Files.html  Language-Fixpoint-Utils-Progress.html  Language-Fixpoint-Utils-Statistics.html
src/Language/Fixpoint/: Config.hs  CounterExample.hs  Counterexample.hs  Defunctionalize.hs  Interface.hs  Minimize.hs  Misc.hs  Names.hs  Parse.hs  Progress.hs  Solver.hs  SortCheck.hs  Types.hs  Visitor.hs
stack/: stack-8.10.7.yaml
tests/: Base.hs.fq  test.hs  testParser.hs
tests/elim/: elim00.fq
tests/horn-old/neg/: T523.smt2  numeric-sort-00.smt2  ple_sum_fuel.3.smt2
tests/horn-old/pos/: bitvec-ii.smt2  hof_qual.smt2  numeric-sort-02.smt2  numeric-sort-03.smt2  ple_list01_adt.smt2  ple_sum_fuel.4.smt2  scrape00.smt2  scrape01.smt2  str00.smt2  sum-rec.smt2
tests/horn-smt2/neg/: T523.smt2  T523.smt2.horn.smt2  abs02-re.smt2  abs02-re.smt2.horn.smt2  ebind03.smt2  ebind03.smt2.horn.smt2  irregular_adt_00.smt2  irregular_adt_00.smt2.horn.smt2  numeric-sort-00.smt2  numeric-sort-00.smt2.horn.smt2  numeric-sort-03.smt2  numeric-sort-03.smt2.horn.smt2  ple0.smt2  ple0.smt2.horn.smt2  ple_list00.smt2  ple_list00.smt2.horn.smt2  ple_list01_adt.smt2  ple_list01_adt.smt2.horn.smt2  ple_list03.smt2  ple_list03.smt2.horn.smt2  ple_sum.smt2  ple_sum.smt2.horn.smt2  ple_sum_fuel.3.smt2  ple_sum_fuel.3.smt2.horn.smt2  tag00.smt2  tag00.smt2.horn.smt2  test00.smt2  test00.smt2.horn.smt2  test01.smt2  test02.smt2  test02.smt2.horn.smt2  test03.smt2  test03.smt2.horn.smt2
tests/horn-smt2/pos/: abs02-re.smt2  bitv.smt2  (+56 more)
tests/long/: vector2.hs.fq
tests/neg/: NonLinear.fq  ProgTest.fq  decl-order.fq  duplicate-names.fq  duplicate-names2.fq  duplicate-names3.fq  ebind-inhab.fq  false.fq  linear.fq  list-len-define.fq  localrw.fq  maps.fq  maps02.fq  obsolete-env.fq  parse-types.fq  sequence.fq  two-calls.fq
tests/old/: Base.hs.fq  arith0-sat.fq  arithk.fq  bitvector.fq  cut0.fq  cut0a.fq  cut1.fq  cut2.fq  emp.fq  map.fq  string.fq  test00.hs.fq
tests/pos/: T416.fq  bags.fq  bags02.fq  bitvec-ii.fq  bitvec.fq  ebind-kvar-chain.fq  eta_cons.fq  ext_double_unfold.fq  ext_lam.fq  ext_lam_multi.fq  literals03.fq  literals04.fq  literals05.fq  localrw.fq  maps.fq  maps02.fq  maps03.fq  maps04.fq  maps05.fq  meas00.fq  pleBool.fq  pleSubst.fq  polybag.fq  polyset.fq  sequence.fq  sets.fq  sets01.fq  test00.smt2  test01.smt2
tests/proof/: GADTs.fq  IndPal00.fq  IndPal000.fq  LH1424.fq  contra.fq  intId.fq  list01_adt.fq  ple1.fq  ple3.fq  rewrite.fq  sum.fq
tests/tasty/: Arbitrary.hs  InterpretTests.hs  Main.hs  ParserTests.hs  ShareMapReference.hs  ShareMapTests.hs  SimplifiableTests.hs  SimplifyInterpreter.hs  SimplifyPLE.hs  SimplifyTests.hs  UndoANFTests.hs
tests/todo/: 03-basic.lhs.fq  Class.hs.fq  Class0.fq  Class00-tx.fq  Class00.fq  DBMovies.hs.fq  GhcListSort.hs.fq  LambdaEval.hs.fq  Map.hs.fq  RBTree-ord.hs.fq  RG.hs.fq  apple.fq  apple.smt2  bot.fq  bot2.fq  delete-13.fq  int-name.fq  maps1.hs.fq  multiple-sorts.fq  nonconsec-bindids.fq  overwrite-names2.fq  pair00.hs.fq  parse-tyfam0.fq  qualif-inst.fq  string-lit.fq  tag-vs-comment.fq  test00.hs.fq  test000.hs.fq  unexpected-ge.fq  wrong-arity.fq  wrong-arity2.fq
tests/weird/: bogus.fq  env0.fq  env1.fq  sets.fq
(+125 files in other folders)
